# aiopayme

./: .gitignore  LICENSE  README.md  aiopayme.rar  pyproject.toml
.github/workflows/: publish.yml
aiopayme/: __init__.py  client.py  dispatcher.py  router.py  utils.py
aiopayme/api/: __init__.py  base.py  cards.py  receipts.py
aiopayme/exceptions/: __init__.py  base.py  errors.py  messages.py
aiopayme/protocol/: methods.py
aiopayme/types/: __init__.py  base.py  cancel.py  check_perform.py  check_transaction.py  create.py  detail.py  fiscal.py  get_statement.py  perform.py
