[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopayme"
version = "0.1.2"
description = "Async Python library for Payme integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://aiopayme.github.io"
Documentation = "https://aiopayme.github.io"
Repository = "https://github.com/aiopayme/aiopayme"

[tool.hatch.version]
path = "aiopayme/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aiopayme"]

[tool.hatch.build]
exclude = [
    ".idea/",
    ".vscode/",
    "__pycache__/",
]